--- a/contact.html
+++ b/contact.html
@@ -7,21 +7,23 @@
 </head>
 <body>
     <!-- modify this form HTML and place wherever you want your form -->
+
+<!-- modify this form HTML and place wherever you want your form -->
 <form
-action="https://formspree.io/f/mgejbzoo"
-method="POST"
-enctype="multipart/form-data"
+  action="https://formspree.io/f/mgejbzoo"
+  method="POST"
 >
-<label>
-  Your email:
-  <input type="email" name="email">
-</label><br/><br/>
-<label>
-  Your file:
-  <input type="file" name="upload">
-</label><br/><br/>
-<label>Your Message:<textarea></textarea></label><br/><br/>
-<button type="submit">Send</button>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+
 </form>
 </body>
 </html>
