--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body{background-image: url("images.jpg");}
       <!--Unordered list-->
     <ul class="flex-container">
         <!--flexi items in form of images of places -->
-        <li class="flex-item">Image 1</li>
+        <li class="flex-item"><img  style="width: 310px; height: 310px;"  src="university.jpg"/></li>
         <li class="flex-item">image 2</li>
         <li class="flex-item">Image 3</li>
     
