--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body{background-image: url("images.jpg");}
     <ul class="flex-container">
         <!--flexi items in form of images of places -->
         <li class="flex-item"><img  style="width: 310px; height: 310px;"  src="university.jpg"/></li>
-        <li class="flex-item">image 2</li>
+        <li class="flex-item"><img  style="width: 310px; height: 310px;"  src="shangrila.jpg"/></li>
         <li class="flex-item">Image 3</li>
     
       </ul>
