--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body{background-image: url("images.jpg");}
         <!--flexi items in form of images of places -->
         <li class="flex-item"><img  style="width: 310px; height: 310px;"  src="university.jpg"/></li>
         <li class="flex-item"><img  style="width: 310px; height: 310px;"  src="shangrila.jpg"/></li>
-        <li class="flex-item">Image 3</li>
+        <li class="flex-item"><img  style="width: 310px; height: 310px;"  src="-_18480e85b4c_original-ratio.jpg"/></li>
     
       </ul>
     </div>
